Almost done with lab 12

--- a/lab12/home.html
+++ b/lab12/home.html
@@ -9,7 +9,10 @@
     </head>
     <body id="container"> 
         <header>
-            <a class="order-now" href="menu.html">Order Now!<img onclick="menu.html" class="order-now" src="images/orderNow-red.png" alt="Click here to order now!"></a>
+            <div class="order-now" onclick="menu.html">
+                    <img onclick="menu.html" class="order-now" src="images/orderNow-red.png" alt="Click here to order now!">
+                    <div onclick="menu.html" class="order-now-text">ORDER NOW!</div>
+            </div>
             <div id="mainImage">
                 Ty's Pizza
             </div>
