Finished lab 12 and 13

--- a/lab12/menu.html
+++ b/lab12/menu.html
@@ -5,7 +5,7 @@
         <script src="http://use.edgefonts.net/passion-one.js"></script>
         <link rel="stylesheet" type="text/css" href="pizza.css">
         <meta charset="utf-8"/>
-        <title>Pizza | Home</title>
+        <title>Pizza | Menu</title>
     </head>
     <body id="container"> 
         <header>
@@ -42,9 +42,12 @@
                 <div class="pizza-image"><img src="images/maccheese.png" alt="Mac and Cheese Pizza"></div>
                 <div class="pizza-description">Mac and Cheese Pizza combines two tasty dinners into one incredible meal. </div>
             </div>
+            <div class="slogan">
+                You won't want to stop eating!
+            </div>
         </main>
         <footer>
-                <div id="footer"><div id="footerText">Site by pizza &copy;2016</div></div></div>
+                <div id="footer"><div id="footerText">Site by pizza &copy;2016</div></div>
         </footer>
     </body>
 </html>
