--- a/lab14/index.html
+++ b/lab14/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Partners</title>
+        <title>Lab15</title>
     </head>
     <body> 
         <div class="full" id="backgroundImage"></div>
