--- a/lab17/spenditures.html
+++ b/lab17/spenditures.html
@@ -9,7 +9,17 @@
     <header class="main-header">
         <h1 class="main-label">Spenditures</h1>
         <div class="menu">
-            &#9776;
+            <span class="icon">&#9776;</span>
+            <ul>
+                <li class="menu">
+                    <div>
+                        <ul>
+                            <a href="https://www.google.com"><li>Page A</li></a>
+                            <a href="https://www.google.com"><li>Page B</li></a>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
         </div>
     </header>
     <nav>
