More work done on prototype1

--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -19,11 +19,11 @@
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
-                    <a href="#">Bio</a>
-                    <a href="#">Sessions</a>
-                    <a href="#">Lessons</a>
+                    <a href="bio.html">Bio</a>
+                    <a href="sessions.html">Sessions</a>
+                    <a href="lessons.html">Lessons</a>
                     <a href="media.html">Media</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </nav>
             <main>
@@ -34,17 +34,17 @@
                         <p>Schmidt has performed and/or recorded alongside many well known artists, musicians and celebrities including Steve Rodgers, Shells, Mike Lindup (Level 42), Kelly Jones (Stereophonics), Jamie Cullum, Rob Brydon, Mike Mondesir (Billy Cobham), Lenny Henry, The Foundations, Kavana, Danny Gruff, Phatts & Small, Dave Giles and more......and let's not forget - 100's of incredible "unknown" musicians too!</p>
                     </div>
                     <footer id="footer">
-                            <div class="footer">
-                                <div class="social-icons">
-                                    <ul>
-                                        <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Link to Alex's Facebook"></a></li>
-                                    </ul>
-                                </div>
-                                <div class="alex">Alexander Schmidt</div>
-                                <div class="footer-text-center">&copy; Copyright 2018.</div>
-                                <div class="footer-text-center">All rights reserved. Theme by Ty Johnson</div>
+                        <div class="footer">
+                            <div class="social-icons">
+                                <ul style="list-style: none;">
+                                    <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Link to Alex's Facebook"></a></li>
+                                </ul>
                             </div>
-                        </footer>
+                            <div class="alex">Alexander Schmidt</div>
+                            <div class="footer-text-center">&copy; Copyright 2018.</div>
+                            <div class="footer-text-center">All rights reserved. Theme by Ty Johnson</div>
+                        </div>
+                    </footer>
                 </div> 
             </main>
         </div>
