--- a/prototype1/media.html
+++ b/prototype1/media.html
@@ -10,18 +10,18 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
     </head>
-    <body class="page-body">
-        <span class="mobile-nav-menu" id="mobile-nav-menu" onclick="openNav()">&#9776; Menu</span>
+    <body class="media-body">
+            <span class="mobile-nav-menu" id="mobile-nav-menu" onclick="openNav()">&#9776;</span>
         <div id="main" onclick="closeNav()">
             <nav>
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
-                    <a href="#">Bio</a>
-                    <a href="#">Sessions</a>
-                    <a href="#">Lessons</a>
+                    <a href="bio.html">Bio</a>
+                    <a href="sessions.html">Sessions</a>
+                    <a href="lessons.html">Lessons</a>
                     <a href="media.html">Media</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </nav>
             <main>
@@ -39,7 +39,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="images/guitarist-home.jpg" alt="Chania">
+                            <img class="carousel-image" src="images/guitarist-home.jpg" alt="Chania">
                             <div class="carousel-caption">
                                 <h3>Los Angeles</h3>
                                 <p>LA is always so much fun!</p>
@@ -47,7 +47,7 @@
                         </div>
                     
                         <div class="item">
-                            <img src="images/Alex2.jpg" alt="Chicago">
+                            <img class="carousel-image" src="images/Alex2.jpg" alt="Chicago">
                             <div class="carousel-caption">
                                 <h3>Chicago</h3>
                                 <p>Thank you, Chicago!</p>
@@ -55,7 +55,7 @@
                         </div>
                     
                         <div class="item">
-                            <img src="images/Alex-Bridge.jpg" alt="New York">
+                            <img class="carousel-image" src="images/Alex-Bridge.jpg" alt="New York">
                             <div class="carousel-caption">
                                 <h3>New York</h3>
                                 <p>We love the Big Apple!</p>
@@ -63,7 +63,7 @@
                         </div>
 
                         <div class="item">
-                            <img src="images/Alex-Holding-Guitar.jpg" alt="New York">
+                            <img class="carousel-image" src="images/Alex-Holding-Guitar.jpg" alt="New York">
                             <div class="carousel-caption">
                                 <h3>New York</h3>
                                 <p>We love the Big Apple!</p>
@@ -71,7 +71,7 @@
                         </div>
 
                         <div class="item">
-                            <img src="images/Alex-Singing.jpg" alt="New York">
+                            <img class="carousel-image" src="images/Alex-Singing.jpg" alt="New York">
                             <div class="carousel-caption">
                                 <h3>New York</h3>
                                 <p>We love the Big Apple!</p>
@@ -79,7 +79,7 @@
                         </div>
 
                         <div class="item">
-                            <img src="images/Alex1.jpg" alt="New York">
+                            <img class="carousel-image" src="images/Alex1.jpg" alt="New York">
                             <div class="carousel-caption">
                                 <h3>New York</h3>
                                 <p>We love the Big Apple!</p>
@@ -97,7 +97,30 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
+
+                <div>
+                    <ol class="thumbnail-carousel">
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="0" class="active"><img class="carousel-thumbnail-img" src="images/guitarist-home.jpg" alt="Chania"></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="1"><img class="carousel-thumbnail-img" src="images/Alex2.jpg" alt="Chicago"></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="2"><img class="carousel-thumbnail-img" src="images/Alex-Bridge.jpg" alt="New York"></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="3"><img class="carousel-thumbnail-img" src="images/Alex-Holding-Guitar.jpg" alt="New York"></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="4"><img class="carousel-thumbnail-img" src="images/Alex-Singing.jpg" alt="New York"></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="5"><img class="carousel-thumbnail-img" src="images/Alex1.jpg" alt="New York"></li>
+                    </ol>
+                </div>
             </main>
+            <footer id="footer">
+                <div class="footer">
+                    <div class="social-icons">
+                        <ul style="list-style: none;">
+                            <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Link to Alex's Facebook"></a></li>
+                        </ul>
+                    </div>
+                    <div class="alex">Alexander Schmidt</div>
+                    <div class="footer-text-center">&copy; Copyright 2018.</div>
+                    <div class="footer-text-center">All rights reserved. Theme by Ty Johnson</div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
