Updating Test for Mobile

--- a/prototype1/media.html
+++ b/prototype1/media.html
@@ -23,6 +23,16 @@
                     <a href="media.html">Media</a>
                     <a href="contact.html">Contact</a>
                 </div>
+                <div class="topnav">
+                    <div class="links">
+                        <a href="index.html">Home</a>
+                        <a href="bio.html">Bio</a>
+                        <a href="sessions.html">Sessions</a>
+                        <a href="lessons.html">Lessons</a>
+                        <a href="media.html">Media</a>
+                        <a href="contact.html">Contact</a>
+                    </div>
+                </div>
             </nav>
             <main>
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
