--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -25,10 +25,20 @@
                     <a href="media.html">Media</a>
                     <a href="contact.html">Contact</a>
                 </div>
+                <div class="topnav">
+                    <div class="links">
+                        <a href="index.html">Home</a>
+                        <a href="bio.html">Bio</a>
+                        <a href="sessions.html">Sessions</a>
+                        <a href="lessons.html">Lessons</a>
+                        <a href="media.html">Media</a>
+                        <a href="contact.html">Contact</a>
+                    </div>
+                </div>
             </nav>
             <main>
                 <div class="container">
-                    <h2 class="page-header">Welcome</h2>
+                    <h2 id="page-header" class="page-header">Welcome</h2>
                     <div id="mainText" class="main-text">
                         <p>Alexander Schmidt is a session guitarist from Wisconsin, currently touring the UK, Europe & Asia with "Thriller Live", The West End musical which celebrates the incredible music of Michael Jackson. Whenever Alexander is not out on the road performing live, he provides recorded guitar parts for many studios, producers and artists, and also teaches guitar via Skype. </p>
                         <p>Schmidt has performed and/or recorded alongside many well known artists, musicians and celebrities including Steve Rodgers, Shells, Mike Lindup (Level 42), Kelly Jones (Stereophonics), Jamie Cullum, Rob Brydon, Mike Mondesir (Billy Cobham), Lenny Henry, The Foundations, Kavana, Danny Gruff, Phatts & Small, Dave Giles and more......and let's not forget - 100's of incredible "unknown" musicians too!</p>
