Test 2 for mobile home

--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -37,7 +37,7 @@
                 </div>
             </nav>
             <main>
-                <div class="container">
+                <div id="container" class="container">
                     <h2 id="page-header" class="page-header">Welcome</h2>
                     <div id="mainText" class="main-text">
                         <p>Alexander Schmidt is a session guitarist from Wisconsin, currently touring the UK, Europe & Asia with "Thriller Live", The West End musical which celebrates the incredible music of Michael Jackson. Whenever Alexander is not out on the road performing live, he provides recorded guitar parts for many studios, producers and artists, and also teaches guitar via Skype. </p>
