--- a/prototype1/contact.html
+++ b/prototype1/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Home | Mastering Guitar</title>
+        <title>Contact | Mastering Guitar</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="js/script.js"></script>
     </head>
@@ -39,15 +39,20 @@
                 </div>
             </nav>
             <main>
-                
+                <div class="social-icons-contact">
+                    <ul style="list-style: none;">
+                        <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Link to Alex's Facebook"></a></li>
+                    </ul>
+                </div>
+                <div class="contact-page-text">
+                    Follow Allan on Facebook using the link above.
+                    <br/>
+                    Call : (612) 597-9606<br>
+                    Email : Alexander.Schmidt@gmail.com
+                </div>
             </main>
             <footer id="footer">
                 <div class="footer">
-                    <div class="social-icons">
-                        <ul style="list-style: none;">
-                            <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Link to Alex's Facebook"></a></li>
-                        </ul>
-                    </div>
                     <div class="alex">Alexander Schmidt</div>
                     <div class="footer-text-center">&copy; Copyright 2018.</div>
                     <div class="footer-text-center">All rights reserved. Theme by Ty Johnson</div>
