--- a/prototype1/lessons.html
+++ b/prototype1/lessons.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Home | Mastering Guitar</title>
+        <title>Lessons | Mastering Guitar</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="js/script.js"></script>
     </head>
@@ -39,7 +39,13 @@
                 </div>
             </nav>
             <main>
-                
+                <div class="pages-container">
+                    <h3 class="page-title">LEARN. IMPROVE. PLAY</h3>
+                    <p>Alex is an experienced guitar tutor who has helped several guitarists get the most out the instrument.
+                    <p>Since he has had many different professional experiences in the music industry, Alex is able to offer real-world advice most other instructors are not able to give. No matter how skilled you are, whether your a beginner or an experienced veteran, Alex has the tools, tricks and experience to get help you you where you want to be quickly.</p>
+                    <p>Alex's teaching method is based on the enjoyment of the instrument. Teaching this way is effective and leads students quickly towards improvement. Every lesson is 100% tailor made for the individuals needs, therefore there are no pre-set or generic study materials. Alex encourages all students to choose topics/styles they'd like to learn. But of course, if you are unsure of what you want to learn, Alex will be there to help you find your interest.</p>
+                    <p>If there's anything else you'd like to know, feel free to get in touch with Alex <a href="contact.html">here</a> who will be more than happy to answer your questions. </p>
+                </div>
             </main>
             <footer id="footer">
                 <div class="footer">
