--- a/prototype1/media.html
+++ b/prototype1/media.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Home | Mastering Guitar</title>
+        <title>Media | Mastering Guitar</title>
         <link rel="stylesheet" type="text/css" href="style.css"><meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -110,12 +110,12 @@
 
                 <div>
                     <ol class="thumbnail-carousel">
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="0" class="active"><img class="carousel-thumbnail-img" src="images/guitarist-home.jpg" alt="Chania"></li>
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="1"><img class="carousel-thumbnail-img" src="images/Alex2.jpg" alt="Chicago"></li>
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="2"><img class="carousel-thumbnail-img" src="images/Alex-Bridge.jpg" alt="New York"></li>
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="3"><img class="carousel-thumbnail-img" src="images/Alex-Holding-Guitar.jpg" alt="New York"></li>
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="4"><img class="carousel-thumbnail-img" src="images/Alex-Singing.jpg" alt="New York"></li>
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="5"><img class="carousel-thumbnail-img" src="images/Alex1.jpg" alt="New York"></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="0" class="active"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/guitarist-home.jpg" alt="Chania"></div></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="1"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex2.jpg" alt="Chicago"></div></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="2"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex-Bridge.jpg" alt="New York"></div></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="3"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex-Holding-Guitar.jpg" alt="New York"></div></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="4"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex-Singing.jpg" alt="New York"></div></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="5"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex1.jpg" alt="New York"></div></li>
                     </ol>
                 </div>
             </main>
