--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -40,10 +40,10 @@
                 <div id="container" class="container">
                     <h2 id="page-header" class="page-header">Welcome</h2>
                     <div id="mainText" class="main-text">
-                        <p>Alexander Schmidt is a session guitarist from Wisconsin, currently touring the UK, Europe & Asia with "Thriller Live", The West End musical which celebrates the incredible music of Michael Jackson. Whenever Alexander is not out on the road performing live, he provides recorded guitar parts for many studios, producers and artists, and also teaches guitar via Skype. </p>
-                        <p>Schmidt has performed and/or recorded alongside many well known artists, musicians and celebrities including Steve Rodgers, Shells, Mike Lindup (Level 42), Kelly Jones (Stereophonics), Jamie Cullum, Rob Brydon, Mike Mondesir (Billy Cobham), Lenny Henry, The Foundations, Kavana, Danny Gruff, Phatts & Small, Dave Giles and more......and let's not forget - 100's of incredible "unknown" musicians too!</p>
-                    </div>
-                    <footer id="footer">
+                        <p>Alexander Schmidt, Alex for short, is a session guitarist from Wisconsin, currently touring attending the University of Wisconsin - Eau Claire. Whenever Alexander is not out on the road performing live, he provides recorded guitar parts for Kuoba Music Group, producers and artists, and also teaches guitar. </p>
+                        <p>Schmidt has performed and/or recorded alongside many artists, and musicians over his career. He is looking towards expanding his role in Kuoba Music Group and becoming a part of ownership. Alex has recorded many different leads and rythms for KMG using many different types of guitars that he owns.</p>                    </div>
+                        <p>Be sure to check out other pages on the site if you are interested in finding out more about Alex Schmidt or are interested in working with him whether it is for a music collaberation, or learning how to improve your skills as a guitarist.</p>
+                        <footer id="footer">
                         <div class="footer">
                             <div class="social-icons">
                                 <ul style="list-style: none;">
