--- a/prototype1/contact.html
+++ b/prototype1/contact.html
@@ -45,7 +45,7 @@
                     </ul>
                 </div>
                 <div class="contact-page-text">
-                    Follow Allan on Facebook using the link above.
+                    Follow Alex on Facebook using the link above.
                     <br/>
                     Call : (612) 597-9606<br>
                     Email : Alexander.Schmidt@gmail.com
