--- a/prototype1/contact.html
+++ b/prototype1/contact.html
@@ -41,7 +41,7 @@
             <main>
                 <div class="social-icons-contact">
                     <ul style="list-style: none;">
-                        <li><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Link to Alex's Facebook"></a></li>
+                        <li class="social-icons-li"><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Link to Alex's Facebook"></a></li>
                     </ul>
                 </div>
                 <div class="contact-page-text">
