--- a/prototype1/media.html
+++ b/prototype1/media.html
@@ -14,6 +14,8 @@
             <span class="mobile-nav-menu" id="mobile-nav-menu" onclick="openNav()">&#9776;</span>
         <div id="main" onclick="closeNav()">
             <nav>
+                <div id="click-to-scroll" style="display: none;"></div>
+                <div id="signature" style="display: none;"></div>
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="index.html">Home</a>
