--- a/prototype2/media.html
+++ b/prototype2/media.html
@@ -67,7 +67,7 @@
                         </div>
                     
                         <div class="item">
-                            <img class="carousel-image" src="images/Alex-Bridge.jpg" alt="New York">
+                            <img class="carousel-image" src="images/Alex_Bridge.jpg" alt="New York">
                             <div class="carousel-caption">
                                 <h3>New York</h3>
                                 <p>We love the Big Apple!</p>
@@ -75,7 +75,7 @@
                         </div>
 
                         <div class="item">
-                            <img class="carousel-image" src="images/Alex-Holding-Guitar.jpg" alt="New York">
+                            <img class="carousel-image" src="images/Alex_Holding_Guitar.jpg" alt="New York">
                             <div class="carousel-caption">
                                 <h3>New York</h3>
                                 <p>We love the Big Apple!</p>
@@ -83,7 +83,7 @@
                         </div>
 
                         <div class="item">
-                            <img class="carousel-image" src="images/Alex-Singing.jpg" alt="New York">
+                            <img class="carousel-image" src="images/Alex_Singing.jpg" alt="New York">
                             <div class="carousel-caption">
                                 <h3>New York</h3>
                                 <p>We love the Big Apple!</p>
@@ -114,9 +114,9 @@
                     <ol class="thumbnail-carousel">
                         <li class="thumb" data-target="#myCarousel" data-slide-to="0" class="active"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/guitarist-home.jpg" alt="Chania"></div></li>
                         <li class="thumb" data-target="#myCarousel" data-slide-to="1"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex2.jpg" alt="Chicago"></div></li>
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="2"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex-Bridge.jpg" alt="New York"></div></li>
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="3"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex-Holding-Guitar.jpg" alt="New York"></div></li>
-                        <li class="thumb" data-target="#myCarousel" data-slide-to="4"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex-Singing.jpg" alt="New York"></div></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="2"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex_Bridge.jpg" alt="New York"></div></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="3"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex_Holding_Guitar.jpg" alt="New York"></div></li>
+                        <li class="thumb" data-target="#myCarousel" data-slide-to="4"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex_Singing.jpg" alt="New York"></div></li>
                         <li class="thumb" data-target="#myCarousel" data-slide-to="5"><div class="carousel-thumbnail-img"><img class="inner-img" src="images/Alex1.jpg" alt="New York"></div></li>
                     </ol>
                 </div>
