--- a/prototype2/media.html
+++ b/prototype2/media.html
@@ -53,48 +53,48 @@
                         <div class="item active">
                             <img class="carousel-image" src="images/guitarist-home.jpg" alt="Chania">
                             <div class="carousel-caption">
-                                <h3>Los Angeles</h3>
-                                <p>LA is always so much fun!</p>
+                                <h3>Eau Claire</h3>
+                                <p>Having fun playing in University of Wisconsin - Eau claire's student center!</p>
                             </div>
                         </div>
                     
                         <div class="item">
                             <img class="carousel-image" src="images/Alex2.jpg" alt="Chicago">
                             <div class="carousel-caption">
-                                <h3>Chicago</h3>
-                                <p>Thank you, Chicago!</p>
+                                <h3>Eau Claire</h3>
+                                <p>Small show with Kuoba Music Group in 2017!</p>
                             </div>
                         </div>
                     
                         <div class="item">
                             <img class="carousel-image" src="images/Alex_Bridge.jpg" alt="New York">
                             <div class="carousel-caption">
-                                <h3>New York</h3>
-                                <p>We love the Big Apple!</p>
+                                <h3>Eau Claire</h3>
+                                <p>Beautiful view of the Chippewa River!</p>
                             </div>
                         </div>
 
                         <div class="item">
                             <img class="carousel-image" src="images/Alex_Holding_Guitar.jpg" alt="New York">
                             <div class="carousel-caption">
-                                <h3>New York</h3>
-                                <p>We love the Big Apple!</p>
+                                <h3>Prentice</h3>
+                                <p>My newest guitar in my collection!</p>
                             </div>
                         </div>
 
                         <div class="item">
                             <img class="carousel-image" src="images/Alex_Singing.jpg" alt="New York">
                             <div class="carousel-caption">
-                                <h3>New York</h3>
-                                <p>We love the Big Apple!</p>
+                                <h3>Eau Claire</h3>
+                                <p>Outside Haas Fine Arts after class!</p>
                             </div>
                         </div>
 
                         <div class="item">
                             <img class="carousel-image" src="images/Alex1.jpg" alt="New York">
                             <div class="carousel-caption">
-                                <h3>New York</h3>
-                                <p>We love the Big Apple!</p>
+                                <h3>Eau Claire</h3>
+                                <p>Small show with Kuoba Music Group in 2018!</p>
                             </div>
                         </div>
                     </div>
